SERVER-71372 fix getMore of partial results from find on sharded cluster